Implement POC book search
